feat: migrating remaining deprecated constructors